--- a/config/configuration.yaml
+++ b/config/configuration.yaml
@@ -5,6 +5,6 @@ default_config:
 logger:
   default: info
   logs:
-    custom_components.miner: debug
+    custom_components.miner_hvac: debug
 debugpy:
   start: true
